# mp2-lab-8-9

./: .travis.yml  CMakeLists.txt  README.md
List/: CMakeLists.txt  list.cpp  list.h
QueueList/: CMakeLists.txt  queuelist.cpp  queuelist.h
StackList/: CMakeLists.txt  stacklist.cpp  stacklist.h
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_TQueueList.cpp  test_TStackList.cpp
